add model descriptions; add feign client for MS Conveyor and implement FeignErrorDecoder; fix some bugs in the MS Conveyor
