# Deal/src/main/resources/openapi/deal-api.yml
@@ -76,7 +76,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/FinishRegistrationRequestDTO"
+              $ref: "#/components/schemas/FinishRegistrationRequestDto"
       responses:
         '200':
           description: Registration and full calculation is finished
@@ -120,8 +120,7 @@ components:
           example: ivanii@google.com
         birthdate:
           type: string
-          format: date
-          pattern: (\d{4}-\d{2}-\d{2})
+          pattern: ((19|20)\d\d)-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])
           example: 1991-01-01
         passportSeries:
           type: string
@@ -184,7 +183,7 @@ components:
         - isInsuranceEnabled
         - isSalaryClient
 
-    FinishRegistrationRequestDTO:
+    FinishRegistrationRequestDto:
       type: object
       properties:
         gender:
@@ -215,7 +214,7 @@ components:
           example: МВД по Республике Карелия
         employment:
           type: object
-          format: EmploymentDTO
+          format: EmploymentDto
         account:
           type: string
           example: 40817810099910004312
